--- a/Transcendence/Game/Readme.htm
+++ b/Transcendence/Game/Readme.htm
@@ -1,13 +1,12 @@
 <HTML>
 	<HEAD>
-		<TITLE>Transcendence 1.2 Read Me</TITLE>
+		<TITLE>Transcendence 1.3 Read Me</TITLE>
 	</HEAD>
 	<body>
 		<h1>Welcome to Transcendence!</h1>
 		<p>Transcendence is a game of space combat and adventure in which you travel 
 		through the star systems of Human Space and encounter both friends and enemies. 
-		For more information on the game and to download the latest version, visit the <a href="http://transcendence.kronosaur.com">
-			Transcendence</a> page online.</p>
+		For more information on the game, visit the <a href="http://transcendence.kronosaur.com">Transcendence</a> page online.</p>
 			
 		<h2>Intallation Instructions</h2>
 		<p>Transcendence has been tested on Windows XP, Windows Vista, Windows 7, and Windows 8. To install, copy 
@@ -92,7 +91,7 @@
 
         <h2>License</h2>
         
-		<p>Copyright © 2003-2013 Kronosaur Productions, LLC. All Rights Reserved.<br/>
+		<p>Copyright © 2003-2014 Kronosaur Productions, LLC. All Rights Reserved.<br/>
 		Transcendence® is a registered trademark of Kronosaur Productions, LLC.</p>
 		
         <p>Redistribution and use in binary forms, are permitted provided that the following conditions are met:</p>
