--- a/Transcendence/TransData/Readme.htm
+++ b/Transcendence/TransData/Readme.htm
@@ -11,9 +11,9 @@
 			ships, items, and encounters in the game. For instructions on how to use the 
 			utility, please consult:</p>
 		<P><A href="http://www.neurohack.com/transcendence/design/TransData.html">http://www.neurohack.com/transcendence/design/TransData.html</A></P>
-		<P>For more information about Transcendence, please consult:</P>
-		<P><A href="http://www.neurohack.com/transcendence/index.html">http://www.neurohack.com/transcendence/index.html</A></P>
-		<P>Copyright © 2006-2012 Kronosaur Productions, LLC. All Rights Reserved.<br />
+		<P>For more information about <i>Transcendence</i>, please consult:</P>
+		<P><A href="http://transcendence-game.com">http://transcendence-game.com</A></P>
+		<P>Copyright © 2006-2014 Kronosaur Productions, LLC. All Rights Reserved.<br />
             Transcendence is a registered trademark.</P>
 	</BODY>
 </HTML>
