--- a/Transcendence/Game/Readme.htm
+++ b/Transcendence/Game/Readme.htm
@@ -1,6 +1,6 @@
 <HTML>
 	<HEAD>
-		<TITLE>Transcendence 1.3 Read Me</TITLE>
+		<TITLE>Transcendence 1.5 Read Me</TITLE>
 	</HEAD>
 	<body>
 		<h1>Welcome to Transcendence!</h1>
@@ -66,7 +66,7 @@
 			computer.</li>
 			<li>
 				<b>[I] key</b>
-			Invokes the powers of Domina.</li>
+			Invokes special powers.</li>
 			<li>
 				<b>[Q] key</b>
 			Communicates with your squadron.</li>
