--- a/Game/Readme.htm
+++ b/Game/Readme.htm
@@ -1,6 +1,6 @@
 <HTML>
 	<HEAD>
-		<TITLE>Transcendence 1.6 Read Me</TITLE>
+		<TITLE>Transcendence 1.7 Read Me</TITLE>
 	</HEAD>
 	<body>
 		<h1>Welcome to Transcendence!</h1>
@@ -9,7 +9,7 @@
 		For more information on the game, visit the <a href="http://transcendence.kronosaur.com">Transcendence</a> page online.</p>
 			
 		<h2>Intallation Instructions</h2>
-		<p>Transcendence has been tested on Windows XP, Windows Vista, Windows 7, and Windows 8. To install, copy 
+		<p>Transcendence has been tested on Windows XP, Windows Vista, Windows 7, 8, and 10. To install, copy 
 		all the files in this ZIP file to a folder on your hard disk. Launch 
 		Transcendence.exe to start the game. You should have the following files:<br/>
 		<ul>
@@ -91,7 +91,7 @@
 
         <h2>License</h2>
         
-		<p>Copyright © 2003-2015 Kronosaur Productions, LLC. All Rights Reserved.<br/>
+		<p>Copyright © 2003-2016 Kronosaur Productions, LLC. All Rights Reserved.<br/>
 		Transcendence® is a registered trademark of Kronosaur Productions, LLC.</p>
 		
         <p>Redistribution and use in binary forms, are permitted provided that the following conditions are met:</p>
