--- a/TransData/Readme.htm
+++ b/TransData/Readme.htm
@@ -10,10 +10,10 @@
 		<p>The TransData utility is used to output tables and information about the 
 			ships, items, and encounters in the game. For instructions on how to use the 
 			utility, please consult:</p>
-		<P><A href="http://www.neurohack.com/transcendence/design/TransData.html">http://www.neurohack.com/transcendence/design/TransData.html</A></P>
+		<P><A href="https://transcendence.kronosaur.com/guidePage.hexm?id=846">https://transcendence.kronosaur.com/guidePage.hexm?id=846</A></P>
 		<P>For more information about <i>Transcendence</i>, please consult:</P>
-		<P><A href="http://transcendence-game.com">http://transcendence-game.com</A></P>
-		<P>Copyright © 2006-2014 Kronosaur Productions, LLC. All Rights Reserved.<br />
+		<P><A href="http://transcendence.kronosaur.com">http://transcendence.kronosaur.com</A></P>
+		<P>Copyright © 2006-2016 Kronosaur Productions, LLC. All Rights Reserved.<br />
             Transcendence is a registered trademark.</P>
 	</BODY>
 </HTML>
