--- a/Game/Readme.htm
+++ b/Game/Readme.htm
@@ -33,8 +33,8 @@
 			Fires the ship's primary weapon.</li>
 			<li>
 				<b>[shift] key</b>
-			Fires the ship's missile launcher. Your ship will not start out with a 
-			launcher. You must obtain one and install it.</li>
+			Fires the ship's missile launcher. If your ship doesn't start out with a 
+			launcher, you must obtain one and install it.</li>
 			<li>
 				<b>[tab] key</b>
 			Selects the type of missile to fire.</li>
