--- a/Game/Readme.htm
+++ b/Game/Readme.htm
@@ -25,11 +25,12 @@
 		control your ship:<br/>
 		<ul>
 			<li>
-				<b>Arrow keys</b>
+				<b>Arrow keys or mouse</b>
 			Move your ship. The left and right arrow keys turn your ship and the down arrow 
-			key thrusts forward.</li>
+			key thrusts forward. You may also aim your ship with the mouse and thrust by
+			pressing the right mouse button.</li>
 			<li>
-				<b>[ctrl] key</b>
+				<b>[ctrl] key or left mouse button</b>
 			Fires the ship's primary weapon.</li>
 			<li>
 				<b>[shift] key</b>
@@ -91,7 +92,7 @@
 
         <h2>License</h2>
         
-		<p>Copyright © 2003-2016 Kronosaur Productions, LLC. All Rights Reserved.<br/>
+		<p>Copyright © 2003-2017 Kronosaur Productions, LLC. All Rights Reserved.<br/>
 		Transcendence® is a registered trademark of Kronosaur Productions, LLC.</p>
 		
         <p>Redistribution and use in binary forms, are permitted provided that the following conditions are met:</p>
