--- a/Game/Readme.htm
+++ b/Game/Readme.htm
@@ -92,8 +92,8 @@
 
         <h2>License</h2>
         
-		<p>Copyright © 2003-2018 Kronosaur Productions, LLC. All Rights Reserved.<br/>
-		Transcendence® is a registered trademark of Kronosaur Productions, LLC.</p>
+		<p>Copyright &copy; 2003-2018 Kronosaur Productions, LLC. All Rights Reserved.<br/>
+		Transcendence&trade; is a registered trademark of Kronosaur Productions, LLC.</p>
 		
         <p>Redistribution and use in binary forms, are permitted provided that the following conditions are met:</p>
 
